--- a/.vscode/styles.css
+++ b/.vscode/styles.css
@@ -5,6 +5,8 @@
   --cor-secundaria: #f6f6f6;
   --cor-terciaria:  #22D4fd;
   --cor-quartenaria: #068DA9;
+  --cor_matematica: #FD8B22;
+
   --fonte-primaria:   font-family: 'Krona One', sans-serif;
   --fonte-secundaria: font-family: 'Montserrat', sans-serif;
   --fonte-terciaria:  font-family: "Libre Baskerville", serif;
@@ -96,7 +98,7 @@ padding-bottom: 12px;
 /* Configuração Padrão - Logo principal - configuração do tamanho logo*/
   .logo-apresentacao{
     height: 100px;
-    padding-right: 30px;
+    padding-right: 40px;
   }
 
   /* Configuração Padrão - cabeçario principal - configuração da distância*/
@@ -224,4 +226,56 @@ height: 30px;
 .apresentacao__rede-social{
 display: flex;
 flex-direction: row;
+}
+
+/* PAGÍNA DE MATEMATICA*/
+h1{ 
+  text-align: left;
+  padding: 38px 38px 0px 38px;
+  font-family: var(--fonte-secundaria);
+  color: var(--cor-secundaria)
+
+}
+
+
+.apresentacao_conteudo_matematica{
+     Display: flex;
+     padding: 60px 60px 0px 60px;
+     font-family: var(--fonte-secundaria);
+     color: var(--cor-terciaria); 
+     font-size: large;
+}
+p{ 
+  color: var(--cor-secundaria) 
+}
+h2{
+  text-align:left;
+  padding: 60px 60px 0px 60px;
+  font-family: var(--fonte-secundaria);
+  color: var(--cor-secundaria)
+}
+
+.lista_matematica{
+  
+     font-family: var(--fonte-secundaria);
+     color: var(--cor-secundaria); 
+     font-size: larger;
+}
+.sem_medo{
+  color: var(--cor_matematica) 
+}
+.videos_enem_matematica{
+  display: flex;
+  list-style: none;
+  font-size: 18px;
+  width: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  
+}
+.imagem_youtube{
+  height: 150px;
 }
