--- a/.vscode/styles.css
+++ b/.vscode/styles.css
@@ -97,7 +97,7 @@ padding-bottom: 12px;
 
 /* Configuração Padrão - Logo principal - configuração do tamanho logo*/
   .logo-apresentacao{
-    height: 100px;
+    height: 150px;
     padding-right: 40px;
   }
 
@@ -110,7 +110,7 @@ padding-bottom: 12px;
 .rodape__pagina{
     text-align: center; 
     background-color: var(--cor-terciaria);
-    color: var(--cor-primaria);
+    color: var(--cor-secundaria);
     padding: 15px;
     font-family: var(--fonte-secundaria);
     font-size: 15px;
@@ -264,18 +264,14 @@ h2{
 .sem_medo{
   color: var(--cor_matematica) 
 }
-.videos_enem_matematica{
-  display: flex;
-  list-style: none;
-  font-size: 18px;
-  width: 100%;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
   
-}
+
 .imagem_youtube{
   height: 150px;
+}
+
+.videos_enem_matematica
+{
+  display: flex;
+  justify-content:space-around;
 }
