--- a/.vscode/styles.css
+++ b/.vscode/styles.css
@@ -97,8 +97,8 @@ padding-bottom: 12px;
 
 /* Configuração Padrão - Logo principal - configuração do tamanho logo*/
   .logo-apresentacao{
-    height: 150px;
-    padding-right: 40px;
+    height: 200px;
+    padding-right: 50px;
   }
 
   /* Configuração Padrão - cabeçario principal - configuração da distância*/
@@ -230,10 +230,11 @@ flex-direction: row;
 
 /* PAGÍNA DE MATEMATICA*/
 h1{ 
-  text-align: left;
-  padding: 38px 38px 0px 38px;
+  font-size: xx-large;
+  text-align:left;
+  padding: 40px 40px 0px 40px;
   font-family: var(--fonte-secundaria);
-  color: var(--cor-secundaria)
+  color: var(--cor-terciaria)
 
 }
 
@@ -243,28 +244,36 @@ h1{
      padding: 60px 60px 0px 60px;
      font-family: var(--fonte-secundaria);
      color: var(--cor-terciaria); 
-     font-size: large;
+     font-size: x-large;
 }
 p{ 
+  text-align:left;
   color: var(--cor-secundaria) 
+  
 }
 h2{
+  font-size: x-large;
   text-align:left;
   padding: 60px 60px 0px 60px;
   font-family: var(--fonte-secundaria);
-  color: var(--cor-secundaria)
+  color: var(--cor-terciaria)
 }
 
 .lista_matematica{
   
      font-family: var(--fonte-secundaria);
      color: var(--cor-secundaria); 
-     font-size: larger;
+     font-size: x-large;
 }
 .sem_medo{
+  font-size: x-large;
   color: var(--cor_matematica) 
+
 }
   
+.veja_videos{
+  font-size: x-large;
+}
 
 .imagem_youtube{
   height: 150px;
@@ -275,3 +284,10 @@ h2{
   display: flex;
   justify-content:space-around;
 }
+.imagem_pagina_matematica
+{
+
+  width: 250;
+}
+
+/*PAGINA DE LINGUAGENS
