--- a/.vscode/styles.css
+++ b/.vscode/styles.css
@@ -234,7 +234,7 @@ h1{
   text-align:left;
   padding: 40px 40px 0px 40px;
   font-family: var(--fonte-secundaria);
-  color: var(--cor-terciaria)
+  color: var(--cor-terciaria))
 
 }
 
@@ -290,4 +290,17 @@ h2{
   width: 250;
 }
 
-/*PAGINA DE LINGUAGENS
+/*PAGINA DE LINGUAGENS*/
+
+.apresentacao_conteudo_titulo h1
+{
+  font-size: xx-large;
+  text-align:left;
+  font-family: var(--fonte-secundaria);
+  color: var(--cor-terciaria)
+}
+.titulos_de_linguagem {
+  font-family: var(--fonte-secundaria); 
+  color:var(--cor-quartenaria)
+}
+
