--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Anta&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+/*importando a fonte de texto do google fonts */
+
+:root {
+    --cor-primaria: #000000;
+    --cor-secundaria: #f6f6f6;
+    --cor-terciaria: #22D4fd;
+    --cor-quartenaria: #068DA9;
+    --fonte-primaria: font-family: 'Krona One', sans-serif;
+    --fonte-secundaria: font-family: 'Montserrat', sans-serif;
+    --fonte-terciaria: font-family: "Libre Baskerville", serif;
+    --fonte-quartenaria: font-family: "Playfair Display", serif;
+}
+
+/*variaveis com as cores e fontes que usaremos no projeto - Aceito sugestões*/
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -6,24 +22,53 @@
 
 body{
     width: 100vw;
-    height: 100vh;
     background-image: url(/assets/images/fundo-azul.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: center center;
 }
 
+.titulo{
+    line-height: 1.7em;
+    margin-left: 0.75em;
+    color: white;
+    font-family: Krona One, Arial, Arial, Helvetica, sans-serif;
+}
 
-.image> img{
+.textfield{
+    padding: 20px;
+    width: 45%;
+}
+.textfield>p{
+    font-family: Krona One, Arial, Helvetica, sans-serif;
+    font-size: 14pt;
+    text-align: start;
+    color: whitesmoke;
+    line-height: 1.8em;
+}
+
+.container{
+    display: flex;
+    
+}
+
+.container>img{
     width: 20%;
 }
 
-
-
-.img03{
-    width: 20%;
+.img-redacao{
     position: relative;
-    left: 77vw;
+    left: 15%;
+    top: 10%;
 }
+
+.img-estudante{
+    position: relative;
+    
+    
+}
+
+
 .main-cards{
     display: flex;
     justify-content: center;
@@ -69,4 +114,46 @@ body{
     width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+}
+
+h2{
+    margin-left: 4%;
+    margin-top: 5%;
+    font-family: Krona One, Arial, Arial, Helvetica, sans-serif;
+    color: rgb(34, 212, 253)
+}
+.container02{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 10%;
+}
+
+.container02>p{
+    color: white;
+    font-family: Krona One, Arial, Helvetica, sans-serif;
+    font-size: 12pt;
+    text-transform: capitalize;
+    
+    
+
+}
+.img03{
+    width: 25%;
+    margin-left: 5%;
+    border-radius: 5px;
+}
+
+.redacao1000{
+    text-align: center;
+    color: white;
+    font-family: Krona one, Arial, Arial, Helvetica, sans-serif;
+}
+
+.rodape__pagina{
+    width: 100vw;
+    background-color: var(--cor-terciaria);
+    padding: 10px;
+    text-align: center;
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
 }
