--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,24 @@ a {
   text-align: center;
 }
 
+.gradient-background {
+  background: linear-gradient(300deg, #00bfff, #003a69, #00d2da);
+  background-size: 180% 180%;
+  animation: gradient-animation 18s ease infinite;
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 .footer {
   display: flex;
   justify-content: center;
