Finalizando estilos padrões

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,21 @@
 /*Estilo padrão */
+@import url("https://fonts.googleapis.com/css2?family=Anta&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"); /*importando a fonte de texto do google fonts */
+
+:root {
+  --cor-primaria: #000000;
+  --cor-secundaria: #f6f6f6;
+  --cor-terciaria: #22d4fd;
+  --cor-quartenaria: #068da9;
+  --fonte-primaria: "Krona One", sans-serif;
+  --fonte-secundaria: "Montserrat", sans-serif;
+  --fonte-terciaria: "Libre Baskerville", serif;
+  --fonte-quartenaria: "Playfair Display", serif;
+}
+
 * {
   padding: 0;
   margin: 0;
+  font-family: Helvetica, sans-serif;
 }
 
 a {
@@ -13,6 +27,22 @@ a {
   justify-content: space-around;
   list-style: none;
   padding: 15px;
+}
+
+.lista-menu a {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  text-decoration: none;
+  padding: 10px;
+  background-color: var(--cor-quartenaria);
+  color: var(--cor-secundaria);
+  border-radius: 03px;
+}
+
+.lista-menu a:hover {
+  background-color: var(--cor-terciaria);
+  margin-top: -2px;
+  padding-bottom: 12px;
 }
 
 .lista-videos {
@@ -28,6 +58,7 @@ a {
 
 .texto-materia {
   text-align: center;
+  color: var(--cor-terciaria);
 }
 
 .gradient-background {
@@ -60,17 +91,24 @@ a {
 .titulo-principal-humanas {
   padding: 35px;
   margin: 40px 0 0 80px;
+  color: var(--cor-secundaria);
+}
+
+.titulo-cor-secundario {
+  color: var(--cor-terciaria);
 }
 
 .texto-secundario-humanas {
   padding: 35px;
   margin: 40px 0 0 80px;
+  color: var(--cor-secundaria);
 }
 
 .titulo-materias-humanas {
   text-align: center;
   padding: 35px;
   margin-top: 15px;
+  color: var(--cor-secundaria);
 }
 
 .thumb-secundaria-humanas {
@@ -81,21 +119,28 @@ a {
   margin-bottom: 15px;
 }
 
+.thumb-video-humanas {
+  border-radius: 20px;
+}
+
 /*Estilo da página da natureza */
 .titulo-principal-natureza {
   padding: 35px;
   margin: 40px 0 0 80px;
+  color: var(--cor-secundaria);
 }
 
 .texto-secundario-natureza {
   padding: 35px;
   margin: 40px 0 0 80px;
+  color: var(--cor-secundaria);
 }
 
 .titulo-materias-natureza {
   text-align: center;
   padding: 35px;
   margin-top: 15px;
+  color: var(--cor-secundaria);
 }
 
 .thumb-secundaria-natureza {
@@ -104,6 +149,10 @@ a {
   padding: 15px;
   margin-top: 25px;
   margin-bottom: 15px;
+}
+
+.thumb-video-natureza {
+  border-radius: 10px;
 }
 
 .main-section {
@@ -120,6 +169,7 @@ a {
 
 .menino {
   height: 450px;
+  border-radius: 10px;
 }
 
 .paragrafo-descritivo {
@@ -132,4 +182,5 @@ a {
 
 .titulo-resumo {
   text-align: center;
+  color: var(--cor-secundaria);
 }
