--- a/.vscode/styles.css
+++ b/.vscode/styles.css
@@ -230,9 +230,10 @@ flex-direction: row;
 
 /* PAGÍNA DE MATEMATICA*/
 h1{ 
-  padding: 38px 38px 0px 38px;
-    font-family: var(--cor-quartenaria);
-    color: var(--cor-terciaria); 
+  font-size: xx-large;
+  text-align:left;
+  font-family: var(--fonte-secundaria);
+  color: var(--cor-terciaria)
 }
 
 .apresentacao_conteudo_matematica{
