--- a/.vscode/styles.css
+++ b/.vscode/styles.css
@@ -229,7 +229,7 @@ flex-direction: row;
 }
 
 /* PAGÍNA DE MATEMATICA*/
-h1{ 
+.titulo_matematica { 
   font-size: xx-large;
   text-align:left;
   font-family: var(--fonte-secundaria);
@@ -240,7 +240,7 @@ h1{
   padding: 30px;
   font-family: var(--fonte-secundaria);
   color: var(--cor-secundaria);
-  font-size: 30px;
+  font-size: x-large;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -251,10 +251,9 @@ p{
   
 }
 h2{
-  font-size: 30px;
+  font-size: xx-large;
   text-align:left;
-  padding: 60px 60px 0px 60px;
-  font-family: var(--cor-terciaria);
+  font-family: var(--fonte-secundaria);
   color: var(--cor-terciaria)
 }
 
@@ -291,7 +290,7 @@ h2{
 
 /*PAGINA DE LINGUAGENS*/
 
-.apresentacao_conteudo_titulo h1
+.apresentacao_conteudo_titulo 
 {
   font-size: xx-large;
   text-align:left;
@@ -299,14 +298,16 @@ h2{
   color: var(--cor-terciaria)
 }
 .titulos_de_linguagem {
+  font-size: x-large;
   font-family: var(--fonte-secundaria); 
   color:var(--cor-quartenaria)
+  
 }
 .texto_linguagem{
   padding: 30px;
   font-family: var(--fonte-secundaria);
   color: var(--cor-secundaria);
-  font-size: 30px;
+  font-size: x-large;
   display: flex;
   flex-direction: row;
   align-items: center;
