--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,28 @@ a {
   text-decoration: none;
 }
 
+.container-lista {
+  padding: 30px;
+}
+
 .lista-menu {
   display: flex;
-  justify-content: flex-start;
-  gap: 10px;
-  list-style: none;
-  padding: 15px;
+  flex-wrap: wrap;
+  list-style-type: none;
+  /*gap: 10px;*/
+  /*padding: 15px;*/
+}
+
+.menu-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+}
+
+.menu-link {
+  display: block;
+  padding: 20px;
 }
 
 .lista-menu a {
