Arquivo login.css e estilo.css atualizados

--- a/login.css
+++ b/login.css
@@ -24,10 +24,7 @@ Ela traz quase o mesmo efeito da imagem de fundo azul, mas em uma qualidade melh
 .main-login {
     width: 100vw;
     height: 100vh;
-    background-image: url(/assets/images/fundo-azul.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
+    background: linear-gradient(to bottom, #0074D9, #001f3f);
     display: flex;
     justify-content: center;
     align-items: center;
