--- a/estilo.css
+++ b/estilo.css
@@ -19,13 +19,57 @@
     margin: 0;
     padding: 0;
 }
+/* menu */
+.container-lista {
+    padding: 30px;
+}
 
+.lista-menu {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    /*gap: 10px;*/
+    /*padding: 15px;*/
+}
+
+.menu-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+}
+
+.menu-link {
+    display: block;
+    padding: 20px;
+}
+
+.lista-menu a {
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+    text-decoration: none;
+    padding: 10px;
+    background-color: var(--cor-quartenaria);
+    color: var(--cor-secundaria);
+    border-radius: 03px;
+}
+
+.lista-menu a:hover {
+    background-color: var(--cor-terciaria);
+    margin-top: -2px;
+    padding-bottom: 12px;
+}
+
+/*Configuração do Menu acaba aqui*/
+
+
+
+
+
+/* minha formatação */
 body{
     width: 100vw;
-    background-image: url(/assets/images/fundo-azul.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+    background: linear-gradient(to bottom, #0074D9, #001f3f);
 }
 
 .titulo{
@@ -53,7 +97,7 @@ body{
 }
 
 .container>img{
-    width: 20%;
+    width: 30%;
 }
 
 .img-redacao{
@@ -64,8 +108,6 @@ body{
 
 .img-estudante{
     position: relative;
-    
-    
 }
 
 
