--- a/estilo.css
+++ b/estilo.css
@@ -75,6 +75,7 @@ body{
 .titulo{
     line-height: 1.7em;
     margin-left: 0.75em;
+    font-size: 3.5em;
     color: white;
     font-family: Krona One, Arial, Arial, Helvetica, sans-serif;
 }
@@ -82,13 +83,18 @@ body{
 .textfield{
     padding: 20px;
     width: 45%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .textfield>p{
     font-family: Krona One, Arial, Helvetica, sans-serif;
-    font-size: 14pt;
+    font-size: 2em;
     text-align: start;
     color: whitesmoke;
-    line-height: 1.8em;
+    line-height: 1.5em;
+    margin-left: 4%;
+    
 }
 
 .container{
@@ -100,17 +106,20 @@ body{
     align-items: flex-end;
     flex-direction: column;
     justify-content: center;
+    margin-left: 10%;
+    
 
 }
 .img-redacao{
-    position: absolute;
-    width: 30%;
+    position: relative;
+    width: 80%;
+    
 }
 
 .img-estudante{
     position: relative;
-    width: 50%;
-    top: 4em;
+    width: 80%;
+    bottom: 20%;
 }
 
 
@@ -132,14 +141,18 @@ body{
 .card>h3{
     margin: 6px;
     font-size: 20px;
+    font-family: Krona one, Arial, Arial, Helvetica, sans-serif;
 }
 
 .card>p{
     margin: 10px;
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-size: 0.90em;
 }
 
 .card>a{
     text-decoration: none;
+    
 }
 
 .link01{
@@ -148,11 +161,11 @@ body{
 }
 .link02{
     position: relative;
-    top: 0.75em;
+    
 }
 .link03{
     position: relative;
-    top: 1.5em;
+    
 }
 
 .card > iframe{
@@ -164,6 +177,7 @@ body{
 h2{
     margin-left: 4%;
     margin-top: 5%;
+    font-size: 2.5em;
     font-family: Krona One, Arial, Arial, Helvetica, sans-serif;
     color: rgb(34, 212, 253)
 }
@@ -180,7 +194,7 @@ h2{
 
 .content > p {
     color: white;
-    font-size: larger;
+    font-size: 1.5em;
     font-family: Krona One, Arial, Arial, Helvetica, sans-serif;
     line-height: 1.5em;
 }
@@ -188,7 +202,6 @@ h2{
 .list{
     margin-left: 2%;
     color: white;
-    font-size: larger;
     font-family: Krona One, Arial, Arial, Helvetica, sans-serif;
     line-height: 2em;
 }
@@ -196,6 +209,7 @@ h2{
 .image {
     width: 20%;
     padding: 10px;
+    margin-left: 15%;
 }
 
 .image img {
@@ -205,6 +219,18 @@ h2{
     text-align: center;
     color: white;
     font-family: Krona one, Arial, Arial, Helvetica, sans-serif;
+    font-size: 1.5em;
+    margin: 50px;
+}
+
+.btn{
+    padding: 12px;
+    border-radius: 5px;
+    margin: 30px;
+    background-color: var(--cor-terciaria);
+    border: none;
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-weight: 500;
 }
 
 .rodape__pagina{
