--- a/redação.css
+++ b/redação.css
@@ -125,7 +125,7 @@ body {
     bottom: 20%;
 }
 
-
+/* Formatação dos cards começam aqui*/
 .main-cards {
     display: flex;
     justify-content: center;
@@ -151,12 +151,14 @@ body {
     margin: 10px;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 0.90em;
+    text-align: center;
 }
 
 .card>a {
     text-decoration: none;
 
 }
+/* Esse Position nos Links é Opcional, serve para alterar a posição dos Links, mas se quiserem pode deixar sem*/
 
 .link01 {
     position: relative;
@@ -178,6 +180,7 @@ body {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
+/* cards terminam aqui ! */
 
 h2 {
     margin-left: 4%;
